--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "https://droop-42.github.io/OC-P3-ohMyFood/",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./css/style.css"
+    "sass": "sass --watch ./sass/main.scss:./css/style.css",
+    "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/Droop-42/OC-P3-ohMyFood/issues"
   },
-  "homepage": "https://github.com/Droop-42/OC-P3-ohMyFood#readme"
+  "homepage": "https://github.com/Droop-42/OC-P3-ohMyFood#readme",
+  "browserslist": "last 4 versions"
 }
